...
        authViewModel.refreshProfile()
    }

    Scaffold(
        topBar = {
            Cabecera(
                titulo = "Mi Perfil",
                showMenuIcon = true,
                onMenuClick = onOpenDrawer
            )
        },
        bottomBar = { BottomNavigationBar(navController = navController) }
    ) { paddingValues ->
...
